--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: finwise2
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -9,11 +9,55 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
+  flutter_dotenv: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.4.7
+  flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.2.3
+  get_it: ^9.2.0
+  go_router: ^17.0.1
+  google_sign_in: ^7.2.0
+  google_sign_in_ios: ^6.2.4
+  json_annotation: ^4.9.0
+  pinput: ^6.0.1
+  supabase_flutter: ^2.12.0
+
+  flutter_gen:
+    output: lib/gen/
+    line_length: 80
+
+    fonts:
+      enabled: true
+    colors:
+      outputs:
+        class_name: AppColors
+      inputs:
+        - assets/colors/colors.xml
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  json_serializable: ^6.11.3
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
+    - assets/png/
+    - assets/colors/
+    - assets/fonts/
+
+  fonts:
+    - family: SourceCodePro
+      fonts:
+        - asset: assets/fonts/SourceCodePro-Light.ttf
+          weight: 100
+          style: normal
+        - asset: assets/fonts/SourceCodePro-SemiBold.ttf
+          weight: 400
+          style: normal
+        - asset: assets/fonts/SourceCodePro-Bold.ttf
+          weight: 700
+          style: normal
