--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,23 +23,25 @@ dependencies:
   pinput: ^6.0.1
   supabase_flutter: ^2.12.0
 
-  flutter_gen:
-    output: lib/gen/
-    line_length: 80
+flutter_gen:
+  output: lib/gen/
+  line_length: 80
 
-    fonts:
-      enabled: true
-    colors:
-      outputs:
-        class_name: AppColors
-      inputs:
-        - assets/colors/colors.xml
+  fonts:
+    enabled: true
+  colors:
+    outputs:
+      class_name: AppColors
+    inputs:
+      - assets/colors/colors.xml
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
   json_serializable: ^6.11.3
+  flutter_gen_runner: ^5.12.0
+  build_runner: ^2.11.0
 
 flutter:
   uses-material-design: true
@@ -48,6 +50,7 @@ flutter:
     - assets/png/
     - assets/colors/
     - assets/fonts/
+    - assets/svg/
 
   fonts:
     - family: SourceCodePro
